modules/03-production/01-ingress/solution/pepsi-nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pepsi-nginx
  name: pepsi-nginx
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pepsi-nginx
    spec:
      containers:
      - image: nginx:1.11.5
        name: pepsi-nginx
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
       - name: config-volume
         configMap:
           name: pepsi-nginx

# Create a confimap with:
# kubectl create configmap pepsi-nginx --from-file=default.conf=pepsi-nginx.conf
