modules/03-production/01-ingress/solution/drinks-ingress-subdomain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drinks
  annotations:
#    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: pepsi.cooldrinks.com
    http:
      paths:
      - backend:
          service:
            name: pepsi-nginx
            port:
              number: 80
  - host: cola.cooldrinks.com
    http:
      paths:
      - backend:
          service:
            name: cola-nginx
            port:
              number: 80
