modules/03-production/01-ingress/solution/drinks-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drinks
  annotations:
#    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pepsi
        backend:
          service:
            name: pepsi-nginx
            port:
              number: 80
      - path: /cola
        backend:
          service:
            name: cola-nginx
            port:
              number: 80
